--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(web-server VERSION 1.0 DESCRIPTION "Cross-Platform Web Server")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+enable_testing()
+add_subdirectory(tests)
 add_subdirectory(src)
